--- a/templates/cliente/clientecarrito.html
+++ b/templates/cliente/clientecarrito.html
@@ -15,7 +15,7 @@
         }
 
         .navbar {
-            background-color: #333;
+            background-color: #2c3e50;
             color: white;
             padding: 5px 20px; /* Más delgada */
             display: flex;
@@ -128,7 +128,7 @@
             <a href="/clientecatalogo">Catálogo</a>
             <a href="/clientecarrito" class="cart-link">
                 Carrito
-                <span id="cart-count">3</span> <!-- Número al lado de "Carrito" -->
+                <span id="cart-count"></span> <!-- Número al lado de "Carrito" -->
             </a>
             <a href="/clientepedidos">Pedidos</a>
             <a href="/">Salir</a>
