--- a/templates/cliente/clientecatalogo.html
+++ b/templates/cliente/clientecatalogo.html
@@ -14,7 +14,7 @@
         }
 
         .navbar {
-            background-color: #333;
+            background-color: #2c3e50;
             color: white;
             padding: 5px 20px; /* Más delgada */
             display: flex;
